# gitxplorer

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  compare.yml  test.yml
include/: font.hpp  sk.hpp  window.hpp
src/: font.cpp  main.cpp  sk.cpp  window.cpp
test/: golden_test.py  test.cpp
